# korTTY_rust

./: .gitignore  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
docs/: FEATURE_OVERVIEW.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: figlet.rs  lib.rs  logging.rs  main.rs  terminal_agent.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/backup/: manager.rs
src-tauri/src/commands/: ai_commands.rs  backup_commands.rs  connection_commands.rs  credential_commands.rs  figlet_commands.rs  gui_theme_commands.rs  key_commands.rs  mod.rs  project_commands.rs  security_commands.rs  settings_commands.rs  sftp_commands.rs  snippet_commands.rs  ssh_commands.rs  teamwork_commands.rs  terminal_agent_commands.rs  theme_commands.rs  translation_commands.rs  window_commands.rs
src-tauri/src/i18n/: translation.rs
src-tauri/src/model/: ai.rs  connection.rs  credential.rs  environment.rs  gpg_key.rs  gui_theme.rs  mod.rs  project.rs  settings.rs  snippet.rs  ssh_key.rs  terminal_agent.rs  theme.rs  tunnel.rs
src-tauri/src/persistence/: exporter.rs  mod.rs  xml_repository.rs
src-tauri/src/persistence/importer/: mobaxterm.rs  mod.rs  mtputty.rs  putty_cm.rs
src-tauri/src/security/: encryption.rs  master_password.rs  mod.rs  vault.rs
src-tauri/src/sftp/: manager.rs
src-tauri/src/ssh/: jump.rs  keepalive.rs  mod.rs  session.rs  tunnel.rs
src-tauri/src/teamwork/: sync.rs
(+61 files in other folders)
